<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_cambiar_estado"
        android:icon="@drawable/icon_change_status"
        android:title="@string/cambiar_estado"
        app:showAsAction="always|withText">

        <menu>

            <item
                android:id="@+id/menu_pendiente"
                android:title="@string/pendiente"
                app:showAsAction="withText" />

            <item
                android:id="@+id/menu_encurso"
                android:title="@string/en_proceso"
                app:showAsAction="withText" />

            <item
                android:id="@+id/menu_pendiente_imp"
                android:title="@string/pendiente_impresion"
                app:showAsAction="withText" />

            <item
                android:id="@+id/menu_no_finalizado"
                android:title="@string/no_finalizada"
                app:showAsAction="withText" />

            <item
                android:id="@+id/menu_finalizado"
                android:title="@string/cerrada"
                app:showAsAction="withText" />

        </menu>
    </item>
</menu>
