<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#ffffff"
    android:orientation="vertical"
    android:padding="@dimen/activity_horizontal_margin">

    <TableLayout
        android:id="@+id/table"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true">

        <TableRow
            android:layout_marginBottom="5dp"
            android:gravity="center|left">

            <TextView
                style="@style/profile_label"
                android:text="@string/tipo"
                android:textSize="@dimen/sp16" />

            <Spinner
                android:id="@+id/spn_tipo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>

        </TableRow>

        <TableRow
            android:layout_marginBottom="5dp"
            android:gravity="center|left">

            <TextView
                style="@style/profile_label"
                android:text="@string/medio"
                android:textSize="@dimen/sp16" />

            <TextView
                android:id="@+id/tv_medio"
                style="@style/profile_edittext"
                android:background="@drawable/et_background_border"
                android:enabled="true"
                android:gravity="left|center"
                android:padding="5dp"
                android:textColorHint="@color/text_gray_alpha"
                android:hint="@string/selecciona_medio__"
                android:textSize="@dimen/sp16"
                android:textColor="@color/text_gray" />
        </TableRow>


        <TableRow
            android:layout_marginBottom="5dp"
            android:gravity="center|left">

            <TextView
                style="@style/profile_label"
                android:text="@string/fecha_limite"
                android:textSize="@dimen/sp16" />

            <TextView
                android:id="@+id/tv_fecha_limite"
                style="@style/profile_edittext"
                android:background="@drawable/et_background_border"
                android:enabled="true"
                android:gravity="left|center"
                android:padding="5dp"
                android:textColorHint="@color/text_gray_alpha"
                android:hint="dd/mm/yyyy"
                android:textSize="@dimen/sp16"
                android:textColor="@color/text_gray" />
        </TableRow>

        <TableRow
            android:layout_marginBottom="5dp"
            android:gravity="top|left">

            <TextView
                style="@style/profile_label"
                android:gravity="center"
                android:text="@string/observaciones"
                android:textSize="@dimen/sp16"/>

            <EditText
                android:id="@+id/et_observaciones"
                style="@style/profile_edittext"
                android:background="@drawable/et_background_border"
                android:enabled="true"
                android:gravity="left|top"
                android:textSize="@dimen/sp16"
                android:lines="3"
                android:padding="5dp"
                android:textColor="@color/text_gray" />
        </TableRow>
    </TableLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/table"
        android:orientation="horizontal"
        android:gravity="center"
        android:paddingTop="10dp">

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_cancel"
            style="?attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:elevation="1dp"
            android:minHeight="@dimen/min_height_btn"
            android:onClick="onClickCancel"
            android:text="@string/cancel"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/sp14" />

        <Button
            android:id="@+id/btn_crear"
            style="?attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:elevation="1dp"
            android:minHeight="@dimen/min_height_btn"
            android:onClick="onClickAccept"
            android:text="@string/create_incidencia"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/sp14" />

    </LinearLayout>

</RelativeLayout>